atualização do Footer

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </article>
 </main>
     <footer>
-        Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">CursoemVideo</a>.
+        Site criado por <a href="https://github.io/RonnyeZ" target="_blank">Ronyéllison</a> para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a>.
     </footer>
 </body>
 </html>
